prerequisites/scratchorgpool/force-app/main/default/objects/ScratchOrgInfo/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>