prerequisites/scratchorgpool/force-app/main/default/objects/ScratchOrgInfo/fields/Pooltag__c.field-meta.xml
<CustomField>
    <fullName>Pooltag__c</fullName>
    <label>Pooltag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>