prerequisites/scratchorgpool/force-app/main/default/objects/ScratchOrgInfo/fields/Return_Assigned_Org__c.field-meta.xml
<CustomField>
    <fullName>Return_Assigned_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Assigned Org</label>
    <type>Checkbox</type>
</CustomField>