prerequisites/scratchorgpool/force-app/main/default/objects/ScratchOrgInfo/validationRules/Scratch_org_is_already_in_use.validationRule-meta.xml
<ValidationRule>
    <fullName>Scratch_org_is_already_in_use</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Allocation_status__c),&apos;Assigned&apos;)  &amp;&amp; 
Return_Assigned_Org__c == FALSE &amp;&amp;   
ISCHANGED(Allocation_status__c)</errorConditionFormula>
    <errorDisplayField>Allocation_status__c</errorDisplayField>
    <errorMessage>Scratch org is already in use</errorMessage>
</ValidationRule>